# uefi-ntfs

./: .gitignore  CLAUDE.md  INTEGRATION.md  README.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  genesis-security-dashboard.html  master.sh  start.sh
auth-portal/: .dockerignore  .env.example  .gitignore  Dockerfile  LocalSettings.ts.example  README.md  docker-compose.yml  package.json  tsconfig.json
auth-portal/docs/: developer-hub.md  index.md  sysadmin-hub.md  translator-hub.md  user-hub.md
auth-portal/i18n/: de.json  en.json  es.json  fr.json  ja.json  qqq.json  zh.json
bembrick-ultimate-edition/: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  GENESIS.md  LICENSE  README.md  docker-compose.yml  entrypoint.sh  package.json  tsconfig.json
caput-ultimate-edition/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GENESIS-2.0-Summary.txt  GENESIS-MASTER-README.md  GENESIS.md  GO.bat  LICENSE  NOTICE  OWNERSHIP.md  README.md  docker-compose.yml  entrypoint.sh  go.sh  package.json  project-summary.sh  render.yaml
caput-ultimate-edition/rust_boundary/: Cargo.toml
caput-ultimate-edition/rust_boundary/src/: fw_check.rs  main.rs
dashboard/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
forbidden-ninja-city-charter-v1.0.0/: README.md
genesis-api/: Dockerfile  package.json
genesis-mobile/: .env.example  .gitignore  README.md  SETUP.md  app.json  babel.config.js  package.json  setup.sh  tsconfig.json
infrastructure/: template.yaml
workflow-guardian/: README.md  action.yml  package.json
(+391 files in other folders)
