[package]
name = "genesis-integrity"
version = "0.1.0"
edition = "2021"
authors = ["MuzzL3d Dictionary Contributors"]
description = "Non-bypassable integrity boundary for GENESIS / Unnamed System"
license = "Apache-2.0"

[dependencies]
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "genesis-verify"
path = "src/main.rs"
